# rectangulate

./: .gitignore  CMakeLists.txt  config.hpp.in  example.prop
headers/: parameters.hpp  point.hpp  rectangle.hpp  rectangular_mesh.hpp  triangle.hpp  triangular_mesh.hpp  utilities.hpp
input/: homoTopo.geo  homoTopo.prop  homoTopoLargeHill.geo  karst.geo  karst.prop
sources/: main.cpp  parameters.cpp  point.cpp  rectangle.cpp  rectangular_mesh.cpp  triangle.cpp  triangular_mesh.cpp  utilities.cpp
